--- a/JAVA/fundamental/src/org/java/core/base/jdbc/example/db.properties
+++ b/JAVA/fundamental/src/org/java/core/base/jdbc/example/db.properties
@@ -5,8 +5,8 @@
 #mysql DB properties
 DB_DRIVER_CLASS=com.mysql.jdbc.Driver
 DB_URL=jdbc:mysql://localhost:3306/UserDB
-DB_USERNAME=pankaj
-DB_PASSWORD=pankaj123
+DB_USERNAME=root
+DB_PASSWORD=password
 
 #Oracle DB Properties
 #DB_DRIVER_CLASS=oracle.jdbc.driver.OracleDriver
