--- a/JAVA/fundamental/DB.properties
+++ b/JAVA/fundamental/DB.properties
@@ -1,5 +1,15 @@
-#DB Config File
-#Wed Oct 10 10:53:33 CST 2018
-db.user=user
-db.host=localhost
-db.pwd=password
+#JDBC Database Configuration Property File
+# We will read the database configuration details from the property files. 
+#This will help us in switching from Oracle to MySQL database easily and vice versa
+
+#mysql DB properties
+DB_DRIVER_CLASS=com.mysql.jdbc.Driver
+DB_URL=jdbc:mysql://localhost:3306/UserDB
+DB_USERNAME=root
+DB_PASSWORD=password
+
+#Oracle DB Properties
+#DB_DRIVER_CLASS=oracle.jdbc.driver.OracleDriver
+#DB_URL=jdbc:oracle:thin:@localhost:1871:MyDBSID
+#DB_USERNAME=scott
+#DB_PASSWORD=tiger
