--- a/JAVA/EE/Spring/SpringAOPExample/pom.xml
+++ b/JAVA/EE/Spring/SpringAOPExample/pom.xml
@@ -59,9 +59,11 @@
 			<scope>runtime</scope>
 		</dependency>
 
+
+
 		<!-- Spring框架默认提供AOP支持，但由于我们使用AspectJ注解来configuring aspects and advices，
 		我们需要将它们包含在pom.xml文件中。 -->
-		<!-- AspectJ dependencies -->
+		<!-- Spring AOP AspectJ Dependencies -->
 		<dependency>
 			<groupId>org.aspectj</groupId>
 			<artifactId>aspectjrt</artifactId>
@@ -74,5 +76,7 @@
 			<artifactId>aspectjtools</artifactId>
 			<version>${aspectj.version}</version>
 		</dependency>
+		
+		
 	</dependencies>
 </project>
