--- a/JAVA/EE/SpringMVC/spring-mvc-example/WebContent/WEB-INF/web.xml
+++ b/JAVA/EE/SpringMVC/spring-mvc-example/WebContent/WEB-INF/web.xml
@@ -2,6 +2,12 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
   <display-name>spring-mvc-example</display-name>
 
+    <!-- Deployment Descriptor -->
+
+    <!--
+        我们必须将Spring MVC框架添加到我们的Web应用程序中，为了那个原因我们需要在web.xml中配置DispatcherServlet.    
+    -->
+
 	<!-- Add Spring MVC DispatcherServlet as front controller -->
 	<servlet>
         <servlet-name>spring</servlet-name>
