--- a/JAVA/EE/SpringMVC/SpringFormValidation/src/main/webapp/WEB-INF/web.xml
+++ b/JAVA/EE/SpringMVC/SpringFormValidation/src/main/webapp/WEB-INF/web.xml
@@ -3,6 +3,8 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
 	
+	<!-- Deployment Descriptor -->
+	
 	<!-- Processes application requests -->
 	<servlet>
 		<servlet-name>appServlet</servlet-name>
