--- a/JAVA/EE/Spring/SpringRestExample/src/main/webapp/WEB-INF/web.xml
+++ b/JAVA/EE/Spring/SpringRestExample/src/main/webapp/WEB-INF/web.xml
@@ -3,6 +3,10 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
 
+	<!--
+		此文件是自动生成的，我没有更改任何内容。 但是，如果要更改context配置文件及其位置，
+		可以在web.xml文件中执行此操作。
+	-->
 	<!-- The definition of the Root Spring Container shared by all Servlets and Filters -->
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
