--- a/JAVA/Tools/Gradle/JavaGradleSimpleExample/pom.xml
+++ b/JAVA/Tools/Gradle/JavaGradleSimpleExample/pom.xml
@@ -1,17 +1,4 @@
-﻿<!-- 将Gradle转换为Maven -->
-<!-- 最后，如果我们转换Gradle的build.gradle构建
-将文件放入Maven的pom.xml文件中，它将如下所示Finally, if we convert our Gradle’s build.gradle build 
-file into Maven’s pom.xml file, it will looks like the following:
- -->
-
-<!-- If we observe both Gradle build.gradle file and maven pom.xml file,
- we can observe that maven’s pom.xml file is XML file and need a lot of 
- XML start tags and end tags.
-
-Where as Gradle’s build.gradle file is plan text and simple file. 
-This is one of the greatest advantages of gradle over maven. -->
-
-<project xmlns="http://maven.apache.org/POM/4.0.0"
+﻿<project xmlns="http://maven.apache.org/POM/4.0.0"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
