--- a/JAVA/EE/SpringORM/SpringDataSource/pom.xml
+++ b/JAVA/EE/SpringORM/SpringDataSource/pom.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	
+	<!--  
+		我们必须添加Spring JDBC，Jackson和MySQL Database驱动程序作为pom.xml文件中的依赖项。
+		如果你不熟悉Rest in Spring，请阅读Spring Restful Webservice Example。
+	-->
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.journaldev.spring</groupId>
 	<artifactId>SpringDataSource</artifactId>
