--- a/JAVA/EE/Spring/mybatisspring/src/main/resources/application.properties
+++ b/JAVA/EE/Spring/mybatisspring/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-#ÉèÖÃSpring BootÏîÄ¿µÄÏà¹ØÊôĞÔ
+#è®¾ç½®Spring Booté¡¹ç›®çš„ç›¸å…³å±æ€§
 
-#SpringµÄÊı¾İ¿âÉèÖÃ£¬Ê¹ÓÃMySQLÊı¾İ¿â£¨ÃûÎªmyDB£©
+#Springçš„æ•°æ®åº“è®¾ç½®ï¼Œä½¿ç”¨MySQLæ•°æ®åº“ï¼ˆåä¸ºmyDBï¼‰
 spring.datasource.url=jdbc:mysql://localhost:3306/mydb?useUnicode=true&characterEncoding=utf8&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=12345678
+spring.datasource.password=password
 
-#MyBatisµÄÏà¹ØÉèÖÃ
-#Ö¸Ã÷Êı¾İÊµÌåÀàËùÔÚµÄ°üÃû
+#MyBatisçš„ç›¸å…³è®¾ç½®
+#æŒ‡æ˜æ•°æ®å®ä½“ç±»æ‰€åœ¨çš„åŒ…å
 mybatis.type-aliases-package=com.jinuxliang.mybatisspring.model
