--- a/JAVA/EE/Spring/springboot-jpa-demo/src/main/resources/application.properties
+++ b/JAVA/EE/Spring/springboot-jpa-demo/src/main/resources/application.properties
@@ -1,6 +1,11 @@
+# 定义数据源的相关配置参数(以spring.datasource打头,有一堆可设置的参数,各参数的详情请自行查看官网文档)
+# Spring Boot会尽可能地依据数据库URL去判断数据源是什么类型的，然后根据其默认的情况去匹配驱动类，
+# 上述配置信息足以让其知道需要加载MySQL的JDBC数据库驱动程序。
 spring.datasource.url=jdbc:mysql://localhost:3306/mydb?characterEncoding=utf8&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=12345678
+spring.datasource.password=password
 
+# 为了便于学习，可以配置Spring Data JPA显示它所发出的SQL命令:
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+# 注意: Spring Data JPA相关的配置，都以"spring.jpa"打头
