--- a/JAVA/EE/Spring/springboot-jpa-demo/pom.xml
+++ b/JAVA/EE/Spring/springboot-jpa-demo/pom.xml
@@ -31,11 +31,13 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
 
+        <!--配置MySQL的依赖(如果要访问MySQL数据库，需要加入对MySQL的项目依赖)-->
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <scope>runtime</scope>
         </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
@@ -51,6 +53,5 @@
             </plugin>
         </plugins>
     </build>
-
 
 </project>
