--- a/JAVA/EE/Spring/springboot2-jdbc-demo/src/main/resources/application.properties
+++ b/JAVA/EE/Spring/springboot2-jdbc-demo/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+# 用于放置数据源的相关参数
+
+# 注意：不同的数据库，同一数据库的不同版本，连接url可能不一样，需要查询官方技术文档。测试数据库的连接是否成功
 spring.datasource.url=jdbc:mysql://localhost:3306/mydb?characterEncoding=utf8&useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=12345678
+spring.datasource.password=password
