--- a/JAVA/EE/SpringBoot/uploader_demo/src/main/resources/application.properties
+++ b/JAVA/EE/SpringBoot/uploader_demo/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-# Ö¸¶¨Ä¬ÈÏÉÏ´«µÄÎÄ¼ş¼Ğ
+# æŒ‡å®šé»˜è®¤ä¸Šä¼ çš„æ–‡ä»¶å¤¹
 spring.servlet.multipart.location=d:/upload
-# ÏŞÖÆµ¥¸öÎÄ¼ş×î´ó´óĞ¡£¬ÕâÀïÉèÖÃÎª5MB
+# é™åˆ¶å•ä¸ªæ–‡ä»¶æœ€å¤§å¤§å°ï¼Œè¿™é‡Œè®¾ç½®ä¸º5MB
 spring.servlet.multipart.max-file-size=5MB
-# ÏŞÖÆËùÓĞÎÄ¼ş×î´ó´óĞ¡£¬ÕâÀïÉèÖÃÎª20MB
+# é™åˆ¶æ‰€æœ‰æ–‡ä»¶æœ€å¤§å¤§å°ï¼Œè¿™é‡Œè®¾ç½®ä¸º20MB
 spring.servlet.multipart.max-request-size=20MB
