--- a/JAVA/EE/SpringBoot/uploader_demo/src/main/resources/application.properties
+++ b/JAVA/EE/SpringBoot/uploader_demo/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+# 在application.properties中定义文件上传的相关参数，注意事先创建好用于保存文件的文件夹：
+
 # 指定默认上传的文件夹
 spring.servlet.multipart.location=d:/upload
 # 限制单个文件最大大小，这里设置为5MB
