--- a/JAVA/EE/SpringBoot/webjar_demo/pom.xml
+++ b/JAVA/EE/SpringBoot/webjar_demo/pom.xml
@@ -19,10 +19,13 @@
     </properties>
 
     <dependencies>
+
+        <!--Thymeleaf的项目依赖-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
