--- a/JAVA/core/pom.xml
+++ b/JAVA/core/pom.xml
@@ -48,7 +48,13 @@
 			<version>3.8.1</version>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 	
 	<build>
 		<finalName>core</finalName>
