--- a/JAVA/EE/MyBatis/QuickStart/pom.xml
+++ b/JAVA/EE/MyBatis/QuickStart/pom.xml
@@ -4,17 +4,21 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <!-- APP相关信息 -->
     <groupId>org.mybatis.core</groupId>
     <artifactId>QuickStart</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
-
     <name>QuickStart</name>
     <description>Mybatis demo project</description>
 
     <properties>
+        <!-- 指定源码的编译方式为UTF-8 -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <!-- 指定源码/class为1.8 -->
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <!-- 指定虚拟机为Java 1.8 -->
         <java.version>1.8</java.version>
     </properties>
 
@@ -68,10 +72,13 @@
 
     <build>
         <plugins>
+            <!-- 使用spring-boot-maven-plugin打包可执行jar -->
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.5.1</version>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <excludeDevtools>true</excludeDevtools>
+                </configuration>
             </plugin>
         </plugins>
     </build>
