--- a/JAVA/core/pom.xml
+++ b/JAVA/core/pom.xml
@@ -60,7 +60,15 @@
             <version>4.12</version>
             <scope>compile</scope>
         </dependency>
-    </dependencies>
+
+		<!-- https://mvnrepository.com/artifact/javassist/javassist -->
+		<dependency>
+			<groupId>javassist</groupId>
+			<artifactId>javassist</artifactId>
+			<version>3.12.1.GA</version>
+		</dependency>
+
+	</dependencies>
 	
 	<build>
 		<finalName>core</finalName>
