--- a/JAVA/EE/Netty/Channel_Example/pom.xml
+++ b/JAVA/EE/Netty/Channel_Example/pom.xml
@@ -6,7 +6,16 @@
 
     <groupId>org.netty.core</groupId>
     <artifactId>Channel_Example</artifactId>
+    <packaging>jar</packaging>
     <version>1.0-SNAPSHOT</version>
 
-
+    <properties>
+        <!-- 指定源码编码方式UTF-8 -->
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <!-- 指定源码/class为1.8 -->
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <!-- 指定虚拟机为Java 1.8 -->
+        <java.version>1.8</java.version>
+    </properties>
 </project>
