--- a/JAVA/EE/SpringCloud/MySpringCloud/microservicecloud-config-3344/pom.xml
+++ b/JAVA/EE/SpringCloud/MySpringCloud/microservicecloud-config-3344/pom.xml
@@ -11,7 +11,7 @@
 
     <dependencies>
 
-        <!-- springCloud Config -->
+        <!-- springCloud Config server端-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-config-server</artifactId>
