--- a/JAVA/core/pom.xml
+++ b/JAVA/core/pom.xml
@@ -68,6 +68,13 @@
 			<version>3.12.1.GA</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/cglib/cglib -->
+		<dependency>
+			<groupId>cglib</groupId>
+			<artifactId>cglib</artifactId>
+			<version>3.2.10</version>
+		</dependency>
+
 	</dependencies>
 	
 	<build>
